# Basic-TMS

./: .env  README.md  REQUIREMENTS.md  data.csv  main.py  populate.py  requirements.txt
app/: __init__.py  models.py  routes.py  swagger.py  tasks.py  tms.db
frontend/: carriers.csv  customers.csv  insert_carriers.py  insert_loads.py  insert_produce_items.py  loads.csv  produce_item.csv  produce_items.csv  test_carriers.py  test_endpoints.py  test_loads.py  test_produce_items.py  testando_endpoints.py  testing_endpoints.py
migrations/versions/: 055017636bc9_initial_migration.py
tmsProject/: docker-compose.yml  main.py  main_fully_code.py  requirements.txt
tmsProject/backend/: Dockerfile  main.py  requirements.txt  wsgi.py
tmsProject/backend/app/: __init__.py  app_old.py  carriers.csv  config.py  database_check.py  database_insertion.py  models.py  pyproject.toml  routes.py  tasks.py  transactional.py  unity_tests.py  utils..py
tmsProject/backend/app/instance/: agriculture.db  database.db  database_agriculture.db  database_agriculture2.db  database_agriculture_test.db  database_test.sql
tmsProject/backend/app/routes/: carriers.py  customers.py  loads.py  produce_item.py
tmsProject/backend/app/tasks/: import_carriers.py
tmsProject/backend/app/templates/: index.html
tmsProject/backend/app/utils/: validators.py
tmsProject/backend/tests/: test_carriers.py  (+2 more)
tmsProject/frontend/: .eslintrc.json  Dockerfile  carriers.csv  insert_carriers.py  insert_loads.py  insert_produce_items.py  loads.csv  produce_item.csv
tmsProject/frontend_old/: package.json
(+10 files in other folders)
